# medoru_api

./: .env.example  README.md  main.py  pyproject.toml
app/: main.py
app/api/routes/: health.py  kanji.py
app/core/: config.py  pagination.py
app/db/: session.py
app/models/: kanji.py
app/schemas/: kanji.py
deployment/: update.yml
deployment/group_vars/: all.yml
deployment/inventory/: production
deployment/templates/: medoru_api.service.j2
